--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -2,6 +2,9 @@
     padding-top: 70px;
     padding-bottom: 70px;
 }
+#estado{
+	font-size:15px;
+}
 .navbar{
 	background-color:rgb(125, 1, 0);
 	margin-bottom:0;
@@ -34,20 +37,46 @@
 	padding-bottom:150px;
 }
 #knowledge{
-	padding-top:0;
+	padding-top:70px;
+	background-color:rgb(51, 51, 51);
 }
 #knowledge #knowledge-cells{
-	padding-top:70px;
-	padding-bottom:70px;
+	padding-top:50px;
+	padding-bottom:50px;
 	background-color:rgb(51, 51, 51);
 	color:white;
 }
 #knowledge #knowledge-explain{
 	padding-top:50px;
 	padding-left:40px;
+	background-color:white;
 }
 #contactus{
 	background-color:rgb(125, 1, 0);
+	color:black;
+	padding-bottom:70px;
+	padding-top:70px;
+}
+#contactus .glyphicon{
+	font-size:50px;
+	padding-top:10px;
+	padding-bottom:10px;
+}
+#contactus .row{
+	color:white;
+}
+#contactus .row .primary{
+	border-top:1px solid black
+}
+#contactus #telefono p{
+	font-size:20px;
+}
+#contactus #email p{
+	font-size:20px;
+}
+#contactus #curriculum{
+	font-size:20px;
+	color:white;
 }
 .footer{
 	background-color:rgb(51, 51, 51);
