--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -5,6 +5,13 @@
 #estado{
 	font-size:15px;
 }
+.explain{
+	border: grey groove 5px;
+    padding-top: 20px;
+}
+.selectExplain{
+	border: white groove 5px;
+}
 .navbar{
 	background-color:rgb(125, 1, 0);
 	margin-bottom:0;
@@ -37,7 +44,7 @@
 	padding-bottom:150px;
 }
 #knowledge{
-	padding-top:70px;
+	padding-top:40px;
 	background-color:rgb(51, 51, 51);
 }
 #knowledge #knowledge-cells{
